--- a/manifest.json
+++ b/manifest.json
@@ -1,21 +1,23 @@
 {
-  "name": "ប្រព័ន្ធបញ្ចូលពិន្ទុសិស្ស",
-  "short_name": "ពិន្ទុសិស្ស",
-  "description": "ប្រព័ន្ធបញ្ចូលពិន្ទុសិស្សសម្រាប់គ្រូបន្ទុកថ្នាក់",
-  "start_url": "/",
-  "display": "standalone",
-  "background_color": "#ffffff",
-  "theme_color": "#007BFF",
-  "icons": [
-    {
-      "src": "/icons/icon-192x192.png",
-      "sizes": "192x192",
-      "type": "image/png"
-    },
-    {
-      "src": "/icons/icon-512x512.png",
-      "sizes": "512x512",
-      "type": "image/png"
-    }
-  ]
+"name": "ប្រព័ន្ធបញ្ចូលពិន្ទុសិស្ស",
+"short_name": "ពិន្ទុសិស្ស",
+"start_url": "/",
+"display": "standalone",
+"background_color": "#f4f6f8",
+"theme_color": "#007BFF",
+"description": "ប្រព័ន្ធសម្រាប់គ្រូបន្ទុកថ្នាក់បញ្ចូលពិន្ទុសិស្ស",
+"icons": [
+{
+"src": "/icons/icon-192x192.png",
+"sizes": "192x192",
+"type": "image/png",
+"purpose": "any maskable"
+},
+{
+"src": "/icons/icon-512x512.png",
+"sizes": "512x512",
+"type": "image/png",
+"purpose": "any"
+}
+]
 }
